<?xml version="1.0" encoding="utf-8"?>
<resources>

   
    <string name="app_name">GeotaggedPhotoPresentation</string>
    <string name="presentation_button">Photo Presentation</string>
    <string name="exif_button">Show Photo Location/Exif Data</string>
    <string name="options_button">Preferences</string>
    <string name="file_choice_button">Choose files</string>
    <string name="start_presentation_button">Start Presentation</string>
    <string name="file_choice_label">No files currently selected</string>
    <string name="select_button">Confirm</string>
    <string name="preferences_string">Delay in presentation (seconds) </string>
    <string name="preferences_summary">Delay in seconds</string>
    <string name="select_all_button">Select all</string>

</resources>