<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



    <Button
        android:id="@+id/presentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presentation_button" />
     <Button
        android:id="@+id/exif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exif_button" />
      <Button
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_button" />
        

</LinearLayout>