<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/filechoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_choice_button" />

    <TextView
        android:id="@+id/filechoicetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_choice_label" />

    <Button
        android:id="@+id/startpresentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_presentation_button" />

</LinearLayout>